Fixed nav overlap

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -7,6 +7,7 @@
   background-color: #191e29;
   overflow: hidden;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  z-index: 10;
 }
 
 .website-logo {
