--- a/src/components/UserView.css
+++ b/src/components/UserView.css
@@ -2,13 +2,12 @@
   position: relative;
   float: right;
   height: fit-content;
-  width: calc(50% - 100px);
-  margin: 50px;
-  margin-top: 20px;
-  margin-bottom: 0px;
+  width: calc(40%);
+  margin: 20px 5% 20px 5%;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  z-index: 9;
 }
 
 .user-view-header {
